--- a/ta10.html
+++ b/ta10.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>duplicates</title>
+    <title>getSum</title>
     <script src="ta10.js" defer></script>
 </head>
 <body>
-    <button onclick="duplicates([1, 2, 2, 3, 4, 4, 4, 5])">get duplicates</button>
+    <button onclick="getSum([1, 2, 3, 4, 5, 6])">get sum</button>
 </body>
 </html>
